--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -573,8 +573,15 @@
 !Fkcapi.h kcapi_aead_ivsize
 !Fkcapi.h kcapi_aead_blocksize
 !Fkcapi.h kcapi_aead_authsize
+!Fkcapi.h kcapi_aead_outbuflen
+!Fkcapi.h kcapi_aead_inbuflen_enc
+!Fkcapi.h kcapi_aead_inbuflen_dec
+!Fkcapi.h kcapi_aead_outbuflen_enc
+!Fkcapi.h kcapi_aead_outbuflen_dec
 !Fkcapi.h kcapi_aead_ccm_nonce_to_iv
 !Fkcapi.h kcapi_aead_getdata
+!Fkcapi.h kcapi_aead_getdata_input
+!Fkcapi.h kcapi_aead_getdata_output
    </sect1>
    <sect1><title>Synchronous AEAD Cipher API - One Shot</title>
 !Fkcapi.h kcapi_aead_encrypt
