add ASYM AIO support

--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -715,11 +715,17 @@
 !Fkcapi.h kcapi_akcipher_setkey
 !Fkcapi.h kcapi_akcipher_setpubkey
    </sect1>
-   <sect1><title>Asymmetric Cipher API - One Shot</title>
+   <sect1><title>Synchronous asymmetric Cipher API - One Shot</title>
 !Fkcapi.h kcapi_akcipher_encrypt
 !Fkcapi.h kcapi_akcipher_decrypt
 !Fkcapi.h kcapi_akcipher_sign
 !Fkcapi.h kcapi_akcipher_verify
+   </sect1>
+   <sect1><title>Aynchronous asymmetric Cipher API - One Shot</title>
+!Fkcapi.h kcapi_akcipher_encrypt_aio
+!Fkcapi.h kcapi_akcipher_decrypt_aio
+!Fkcapi.h kcapi_akcipher_sign_aio
+!Fkcapi.h kcapi_akcipher_verify_aio
    </sect1>
    <sect1><title>Asymmetric Cipher API - Stream</title>
 !Fkcapi.h kcapi_akcipher_stream_init_enc
