add HKDF (RFC5869)

--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -742,6 +742,7 @@
 !Fkcapi.h kcapi_kdf_ctr
 !Fkcapi.h kcapi_pbkdf
 !Fkcapi.h kcapi_pbkdf_iteration_count
+!Fkcapi.h kcapi_hkdf
    </sect1>
  </chapter>
 </book>
