add kcapi_rng_seedsize API call
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -707,6 +707,7 @@
 !Fkcapi.h kcapi_rng_destroy
 !Fkcapi.h kcapi_rng_seed
 !Fkcapi.h kcapi_rng_generate
+!Fkcapi.h kcapi_rng_seedsize
    </sect1>
    <sect1><title>Asymmetric Cipher API - Generic</title>
 !Pkcapi.h Asymmetric Cipher API
