KPP: integrate testing and documentation
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -736,6 +736,21 @@
 !Fkcapi.h kcapi_akcipher_stream_update
 !Fkcapi.h kcapi_akcipher_stream_op
    </sect1>
+   <sect1><title>Key Protocol Primitives API - Generic</title>
+!Fkcapi.h kcapi_kpp_init
+!Fkcapi.h kcapi_kpp_destroy
+!Fkcapi.h kcapi_kpp_dh_setparam_pkcs3
+!Fkcapi.h kcapi_kpp_ecdh_setcurve
+!Fkcapi.h kcapi_kpp_setkey
+   </sect1>
+   <sect1><title>Synchronous Key Protocol Primitives API - One Shot</title>
+!Fkcapi.h kcapi_kpp_keygen
+!Fkcapi.h kcapi_kpp_ssgen
+   </sect1>
+   <sect1><title>Asynchronous Key Protocol Primitives API - One Shot</title>
+!Fkcapi.h kcapi_kpp_keygen_aio
+!Fkcapi.h kcapi_kpp_ssgen_aio
+   </sect1>
    <sect1><title>Key Derivation Functions</title>
 !Pkcapi.h Key Derivation Functions
 !Fkcapi.h kcapi_kdf_dpi
