--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -791,6 +791,7 @@
 !Fkcapi.h kcapi_cipher_stream_init_enc
 !Fkcapi.h kcapi_cipher_stream_init_dec
 !Fkcapi.h kcapi_cipher_stream_update
+!Fkcapi.h kcapi_cipher_stream_update_last
 !Fkcapi.h kcapi_cipher_stream_op
    </sect1>
    <sect1><title>AEAD Cipher API - Generic</title>
