Enable SM3 hash algorithm
SM3 algorithm was introduced in kernel version 4.15, so it is
necessary to support SM3 algorithm.

Signed-off-by: Tianjia Zhang <tianjia.zhang@linux.alibaba.com>
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -849,11 +849,13 @@
 !Fkcapi.h kcapi_md_sha256
 !Fkcapi.h kcapi_md_sha384
 !Fkcapi.h kcapi_md_sha512
+!Fkcapi.h kcapi_md_sm3
 !Fkcapi.h kcapi_md_hmac_sha1
 !Fkcapi.h kcapi_md_hmac_sha224
 !Fkcapi.h kcapi_md_hmac_sha256
 !Fkcapi.h kcapi_md_hmac_sha384
 !Fkcapi.h kcapi_md_hmac_sha512
+!Fkcapi.h kcapi_md_hmac_sm3
    </sect1>
    <sect1><title>Message Digest Cipher API - Stream</title>
 !Fkcapi.h kcapi_md_update
