fix documentation references
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -781,10 +781,10 @@
 !Fkcapi.h kcapi_cipher_dec_aes_cbc
 !Fkcapi.h kcapi_cipher_enc_aes_ctr
 !Fkcapi.h kcapi_cipher_dec_aes_ctr
-!Fkcapi.h kcapi_cipher_enc_sm4_cbc;
-!Fkcapi.h kcapi_cipher_dec_sm4_cbc;
-!Fkcapi.h kcapi_cipher_enc_sm4_ctr;
-!Fkcapi.h kcapi_cipher_dec_sm4_ctr;
+!Fkcapi.h kcapi_cipher_enc_sm4_cbc
+!Fkcapi.h kcapi_cipher_dec_sm4_cbc
+!Fkcapi.h kcapi_cipher_enc_sm4_ctr
+!Fkcapi.h kcapi_cipher_dec_sm4_ctr
    </sect1>
    <sect1><title>Asynchronous Symmetric Cipher API - One Shot</title>
 !Fkcapi.h kcapi_cipher_encrypt_aio
